# ncmplus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp  ncmcrypt.cpp
src/include/: ncmcrypt.h
